--- a/medical_data_visualizer/tests_for_medical_analysis.ipynb
+++ b/medical_data_visualizer/tests_for_medical_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "b0f9b5ff",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "2cd30108",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "2a44c0ca",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "92b29e48",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "Name: overweight, Length: 70000, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,21 +1017,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "fc59f9df",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'columns'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6964/3289350417.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\users\\eduar\\appdata\\local\\programs\\python\\python39\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5485\u001b[0m         ):\n\u001b[0;32m   5486\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5487\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5488\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5489\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'columns'"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['id', 'age', 'gender', 'height', 'weight', 'ap_hi', 'ap_lo',\n",
+       "       'cholesterol', 'gluc', 'smoke', 'alco', 'active', 'cardio',\n",
+       "       'overweight'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1040,11 +1041,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1c3ec908",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>ap_hi</th>\n",
+       "      <th>ap_lo</th>\n",
+       "      <th>cholesterol</th>\n",
+       "      <th>gluc</th>\n",
+       "      <th>smoke</th>\n",
+       "      <th>alco</th>\n",
+       "      <th>active</th>\n",
+       "      <th>cardio</th>\n",
+       "      <th>overweight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>24</td>\n",
+       "      <td>16782</td>\n",
+       "      <td>2</td>\n",
+       "      <td>172</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>114</td>\n",
+       "      <td>19570</td>\n",
+       "      <td>1</td>\n",
+       "      <td>152</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>160</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>267</td>\n",
+       "      <td>22675</td>\n",
+       "      <td>1</td>\n",
+       "      <td>176</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>267</th>\n",
+       "      <td>366</td>\n",
+       "      <td>17460</td>\n",
+       "      <td>1</td>\n",
+       "      <td>165</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>390</td>\n",
+       "      <td>22510</td>\n",
+       "      <td>2</td>\n",
+       "      <td>170</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69668</th>\n",
+       "      <td>99507</td>\n",
+       "      <td>14925</td>\n",
+       "      <td>1</td>\n",
+       "      <td>170</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>160</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69699</th>\n",
+       "      <td>99553</td>\n",
+       "      <td>23183</td>\n",
+       "      <td>2</td>\n",
+       "      <td>178</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69946</th>\n",
+       "      <td>99925</td>\n",
+       "      <td>21333</td>\n",
+       "      <td>1</td>\n",
+       "      <td>164</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69947</th>\n",
+       "      <td>99930</td>\n",
+       "      <td>23305</td>\n",
+       "      <td>2</td>\n",
+       "      <td>172</td>\n",
+       "      <td>113.0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69996</th>\n",
+       "      <td>99995</td>\n",
+       "      <td>22601</td>\n",
+       "      <td>1</td>\n",
+       "      <td>158</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1497 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id    age  gender  height  weight  ap_hi  ap_lo  cholesterol  gluc  \\\n",
+       "15        24  16782       2     172   112.0    120     80            0     0   \n",
+       "83       114  19570       1     152   110.0    160     90            0     0   \n",
+       "196      267  22675       1     176   108.0    140     90            0     0   \n",
+       "267      366  17460       1     165   115.0    150    100            0     0   \n",
+       "286      390  22510       2     170   115.0    120     80            1     1   \n",
+       "...      ...    ...     ...     ...     ...    ...    ...          ...   ...   \n",
+       "69668  99507  14925       1     170   111.0    160     90            1     0   \n",
+       "69699  99553  23183       2     178   113.0    130     90            1     1   \n",
+       "69946  99925  21333       1     164   115.0    130     80            0     0   \n",
+       "69947  99930  23305       2     172   113.0    110     80            0     0   \n",
+       "69996  99995  22601       1     158   126.0    140     90            1     1   \n",
+       "\n",
+       "       smoke  alco  active  cardio  overweight  \n",
+       "15         0     0       0       1           1  \n",
+       "83         0     0       1       1           1  \n",
+       "196        0     0       0       0           1  \n",
+       "267        0     0       1       1           1  \n",
+       "286        0     0       1       0           1  \n",
+       "...      ...   ...     ...     ...         ...  \n",
+       "69668      0     1       0       1           1  \n",
+       "69699      1     0       1       1           1  \n",
+       "69946      0     0       1       1           1  \n",
+       "69947      0     0       0       1           1  \n",
+       "69996      0     0       1       1           1  \n",
+       "\n",
+       "[1497 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "    df.loc[(df['ap_lo'] <= df['ap_hi']) &\n",
+    "           (df['height'] >= df['height'].quantile(0.025)) &\n",
+    "           (df['height'] <= df['height'].quantile(0.975)) &\n",
+    "           (df['weight'] >= df['weight'].quantile(0.025)) &\n",
+    "           (df['weight'] >= df['weight'].quantile(0.975))]"
+   ]
   },
   {
    "cell_type": "code",
